<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.solarwinds.joboe</groupId>
    <artifactId>joboe</artifactId>
    <version>${revision}</version>
  </parent>

  <artifactId>core</artifactId>
  <packaging>jar</packaging>

  <name>core</name>
  <url>https://maven.apache.org</url>
  <properties>
    <grpc.version>1.59.0</grpc.version>
  </properties>

  <repositories>
    <repository>
      <id>github-read</id>
      <url>https://maven.pkg.github.com/solarwinds/apm-proto</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-bom</artifactId>
        <version>4.1.100.Final</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>3.0.2</version>
    </dependency>
    <dependency>
      <groupId>io.grpc</groupId>
      <artifactId>grpc-netty</artifactId>
      <version>${grpc.version}</version>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20231013</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.26</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>okhttp</artifactId>
      <version>4.10.0</version>
    </dependency>
    <dependency>
      <groupId>cloud.solarwindscloud</groupId>
      <artifactId>apm-proto</artifactId>
      <version>1.0.1</version>
      <exclusions>
        <exclusion>
          <artifactId>guava</artifactId>
          <groupId>com.google.guava</groupId>
        </exclusion>
        <exclusion>
          <artifactId>grpc-netty-shaded</artifactId>
          <groupId>io.grpc</groupId>
        </exclusion>
        <exclusion>
          <artifactId>grpc-services</artifactId>
          <groupId>io.grpc</groupId>
        </exclusion>
        <exclusion>
          <artifactId>grpc-stub</artifactId>
          <groupId>io.grpc</groupId>
        </exclusion>
        <exclusion>
          <artifactId>grpc-protobuf</artifactId>
          <groupId>io.grpc</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>io.grpc</groupId>
      <artifactId>grpc-stub</artifactId>
      <version>${grpc.version}</version>
    </dependency>
    <dependency>
      <groupId>io.grpc</groupId>
      <artifactId>grpc-protobuf</artifactId>
      <version>${grpc.version}</version>
    </dependency>
  </dependencies>
  <build>
    <testResources>
      <testResource>
        <directory>${basedir}/src/test/java</directory>
        <filtering>false</filtering>
        <includes>
          <include>**/*.json</include>
        </includes>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>8</source>
          <target>8</target>
          <testSource>8</testSource>
          <testTarget>8</testTarget>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <skip>false</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
        <configuration>
          <argLine>${surefireArgLine} -Duser.timezone=UTC</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.10</version>
        <configuration>
          <formats>HTML,CSV,XML</formats>
          <dataFile>${project.build.directory}/coverage-data/jacoco-ut.exec</dataFile>
          <outputDirectory>${project.build.directory}/coverage-report</outputDirectory>
        </configuration>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <propertyName>surefireArgLine</propertyName>
              <destFile>${project.build.directory}/coverage-data/jacoco-ut.exec</destFile>
            </configuration>
          </execution>
          <execution>
            <id>jacoco-report</id>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>INSTRUCTION</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.64</minimum>
                    </limit>
                    <limit>
                      <counter>BRANCH</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.5</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
              <haltOnFailure>false</haltOnFailure>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <createSourcesJar>true</createSourcesJar>
              <shadeSourcesContent>true</shadeSourcesContent>
              <minimizeJar>true</minimizeJar>
              <filters>
                <filter>
                  <artifact>com.google.auto.service:auto-service</artifact>
                  <includes>
                    <include>com/google/auto/service/auto-service/*</include>
                  </includes>
                </filter>
              </filters>
              <relocations>
                <relocation>
                  <pattern>com.solarwinds.trace</pattern>
                  <shadedPattern>com.solarwinds.shaded.trace</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>android.annotation</pattern>
                  <shadedPattern>com.solarwinds.shaded.android.annotation</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>javax.annotation</pattern>
                  <shadedPattern>com.solarwinds.shaded.javax.annotation</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>cloud</pattern>
                  <shadedPattern>com.solarwinds.shaded.cloud</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>okhttp3</pattern>
                  <shadedPattern>com.solarwinds.shaded.okhttp3</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>okio</pattern>
                  <shadedPattern>com.solarwinds.shaded.okio</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>kotlin</pattern>
                  <shadedPattern>com.solarwinds.shaded.kotlin</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>io</pattern>
                  <shadedPattern>com.solarwinds.shaded.io</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org</pattern>
                  <shadedPattern>com.solarwinds.shaded.org</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>google</pattern>
                  <shadedPattern>com.solarwinds.shaded.google2</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.google</pattern>
                  <!-- some of the dependencies include guava too-->
                  <shadedPattern>com.solarwinds.shaded.google</shadedPattern>
                </relocation>
              </relocations>
              <transformers>
                <!-- have to define DontIncludeResourceTransformer one at a time, otherwise it does not work -->
                <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
                  <resource>NOTICE</resource>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
                  <resource>DEPENDENCIES</resource>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
                  <resource>LICENSE</resource>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
                  <resource>.txt</resource>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
